--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ pandas==2.1.1
 Flask-Session==0.4.0
 Flask-WTF==1.1.1
 
-# Commonly used supporting packages
-Werkzeug==2.3.6
+# Remove the specific version constraint on Werkzeug to allow compatibility with Flask
+Werkzeug>=2.3.7
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 itsdangerous==2.1.2
@@ -14,5 +14,3 @@ itsdangerous==2.1.2
 # File management and JSON handling
 glob2==0.7
 jsonschema==4.18.3
-
-# Random number generation (Python's built-in random module doesn't need additional installation)
