--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 Flask==2.3.3
 pandas==2.1.1
+numpy==1.25.3  # Use a compatible version with pandas
 
 # Flask supporting packages
 Flask-Session==0.4.0
 Flask-WTF==1.1.1
 
-# Remove the specific version constraint on Werkzeug to allow compatibility with Flask
+# Support libraries
 Werkzeug>=2.3.7
 Jinja2==3.1.2
 MarkupSafe==2.1.3
